# loguru-betterstack

./: .gitignore  CHANGELOG.md  LICENSE  POSTMORTEM.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic.py
src/loguru_betterstack/: __init__.py  handler.py
tests/: test_handler.py
