[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loguru-betterstack"
version = "0.1.1"
description = "Ship Loguru logs to Better Stack (Logtail) over HTTP, batched and non-blocking."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Cristian Puflea", email = "pufleacristian56@gmail.com" }]
requires-python = ">=3.9"
keywords = ["loguru", "betterstack", "logtail", "logging", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
]
dependencies = [
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/coffeenjoyer17/loguru-betterstack"
Issues = "https://github.com/coffeenjoyer17/loguru-betterstack/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
